# falco_blueprint_basic

{{ cookiecutter.project_name }}/: .env.template  pyproject.toml
{{ cookiecutter.project_name }}/deploy/: Dockerfile  gunicorn.conf.py
{{ cookiecutter.project_name }}/deploy/etc/: litestream.yml
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/s6-rc.d/litestream/: run
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/s6-rc.d/server/: run
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: __main__.py  settings.py
